--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body{
 }
 .logo {
   margin-bottom: 16px;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   background: transparent;
